--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ggR52QcdJOS3BQSairL1PfgaRMkdROysKJy0s0YjmYA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 # Security Settings - Development Mode (akan aktif otomatis di production)
 FORCE_HTTPS=false
-SESSION_SECURE_COOKIE=false
+SESSION_SECURE_COOKIE=true
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
