--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "bootstrap": "^5.3.3",
         "laravel-vite-plugin": "^1.1.0",
         "postcss": "^8.5.6",
+        "rollup": "^4.43.0",
         "sass": "^1.83.0",
-        "tailwindcss": "^4.1.11",
         "vite": "^7.2.2"
     }
 }
